fix(ProjectDetail): set fixed height and center positioning for better visibility across devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,3 +101,7 @@ body, html {
   }
 }
 
+
+.slick-list, .slick-track, .slick-slide > div {
+  @apply h-slider;
+}
